--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -144,7 +144,7 @@ jobs:
             libsdl2-dev libsdl2-image-dev libsdl2-mixer-dev libsdl2-ttf-dev \
             patchelf \
             fakeroot \
-            dpkg-deb \
+            dpkg-dev \
             imagemagick
         run: |
           export DEBIAN_FRONTEND=noninteractive
