--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -148,10 +148,6 @@ jobs:
         run: |
           export DEBIAN_FRONTEND=noninteractive
           
-          # Debug: Show current directory and list files
-          pwd
-          ls -la
-          
           python3 -m venv venv
           source venv/bin/activate
           pip install --upgrade pip
@@ -159,14 +155,7 @@ jobs:
           pip install pygame pyinstaller
           pip install -r requirements.txt
 
-          # Make sure main.py exists before running PyInstaller
-          if [ ! -f "main.py" ]; then
-            echo "Error: main.py not found in current directory"
-            find . -name "main.py" -type f
-            exit 1
-          fi
-
-          pyinstaller --onefile --name PropertyTycoon --add-data "assets:assets" main.py
+          pyinstaller --onefile --name PropertyTycoon --add-data "assets:assets" Main.py
 
           PKG_NAME="propertytycoon"
           PKG_VERSION="${{ steps.get_version_deb.outputs.version }}"
