--- a/.github/workflows/Build,ReleaseGame(nuitka).yml
+++ b/.github/workflows/Build,ReleaseGame(nuitka).yml
@@ -203,8 +203,7 @@ jobs:
           Architecture: ${PKG_ARCH}
           Maintainer: Your Name <your.email@example.com>
           Depends: python3, libsdl2-2.0-0, libsdl2-image-2.0-0, libsdl2-mixer-2.0-0, libsdl2-ttf-2.0-0
-          Description: Property Tycoon Game
-          Property Tycoon deb version Built for Linux ARM64.
+          Description: Property Tycoon Game - deb version built for Linux ARM64.
           EOF
 
           cat << EOF > "${APP_DIR}/${PKG_NAME}.desktop"
