--- a/.github/workflows/Build,ReleaseGame(nuitka).yml
+++ b/.github/workflows/Build,ReleaseGame(nuitka).yml
@@ -42,7 +42,7 @@ jobs:
     - name: Build executable for Windows
       working-directory: ${{ github.workspace }}
       run: |
-        python -m nuitka --standalone --onefile --assume-yes-for-downloads --windows-icon-from-ico="${{ github.workspace }}/assets/image/icon.ico" --include-data-dir="${{ github.workspace }}/assets=assets" --output-dir=dist --windows-console-mode=disable Main.py
+        python -m nuitka --standalone --onefile --assume-yes-for-downloads --windows-icon-from-ico="${{ github.workspace }}/assets/image/icon.ico" --include-data-dir="${{ github.workspace }}/assets=assets" --output-dir=dist --windows-console-mode=disable --jobs=8 --lto=yes Main.py
         mv dist/main.exe dist/PropertyTycoon-Windows.exe
 
     - name: Upload build artifact
@@ -62,6 +62,9 @@ jobs:
       with:
         python-version: '3.x'
         architecture: 'x64'
+      env:
+        CCACHE_DIR: /Users/runner/Library/Caches/ccache
+        CCACHE_MAXSIZE: 5G
 
     - name: Install dependencies
       run: |
@@ -73,6 +76,9 @@ jobs:
         pip install pillow
         pip install -r requirements.txt
         brew install ccache
+
+    - name: Check ccache stats
+      run: ccache -s
 
     - name: Create icon script
       run: |
@@ -97,7 +103,7 @@ jobs:
     - name: Build macOS app
       working-directory: ${{ github.workspace }}
       run: |
-        python -m nuitka --standalone --macos-create-app-bundle --macos-app-icon=icon.icns --assume-yes-for-downloads --include-data-dir="${{ github.workspace }}/assets=assets" --output-dir=dist Main.py
+        python -m nuitka --standalone --macos-create-app-bundle --macos-app-icon=icon.icns --assume-yes-for-downloads --include-data-dir="${{ github.workspace }}/assets=assets" --output-dir=dist --jobs=8 --lto=yes Main.py
         
         # Rename the app bundle
         mv dist/main.app dist/PropertyTycoon.app
@@ -172,7 +178,7 @@ jobs:
           pip install pygame nuitka ordered-set zstandard pillow
           pip install -r requirements.txt
 
-          python3 -m nuitka --standalone --onefile --assume-yes-for-downloads --include-data-dir="assets=assets" --output-dir=dist Main.py
+          python3 -m nuitka --standalone --onefile --assume-yes-for-downloads --include-data-dir="assets=assets" --output-dir=dist --jobs=8 Main.py
           mv dist/main.bin dist/PropertyTycoon
 
           PKG_NAME="propertytycoon"
